cp project/force-app/main/default/objects/Registration__c/Registration__c.object-meta.xml
<CustomObject>
    <description>Sub-Registrar Sale Deed Registration records. Golden Rule 5: Finality.</description>
    <label>Registration</label>
    <nameField>
        <displayFormat>REG-{0000}</displayFormat>
        <label>Registration Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>