cp project/force-app/main/default/objects/Registration__c/fields/DD_Reference__c.field-meta.xml
<CustomField>
    <fullName>DD_Reference__c</fullName>
    <label>DD Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>