cp project/force-app/main/default/objects/Registration__c/fields/Legal_Approval__c.field-meta.xml
<CustomField>
    <fullName>Legal_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Approval</label>
    <type>Checkbox</type>
</CustomField>