cp project/force-app/main/default/objects/Registration__c/fields/Registration_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Registration_Remarks__c</fullName>
    <label>Registration Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>